--- a/input.css
+++ b/input.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-#navbar{
-    background: url('../assets/home/background-home-desktop.jpg');
+#hero{
+    background: url('../assets/home/home.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 @media only screen and (max-width: 1020px) {
-    #navbar{
+    #hero{
     background: url('../assets/home/background-home-mobile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
