--- a/input.css
+++ b/input.css
@@ -2,11 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.active-link{
+    @apply border-b-2 border-white;
+}
+
+
 #hero{
     background: url('../assets/home/home.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
 @media only screen and (max-width: 1020px) {
     #hero{
@@ -21,5 +27,32 @@
     background: url('../assets/home/Mobile-home.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center top;
+    }
+}
+
+/*  */
+
+#destination{
+    background: url('../assets/destination/bg-desktop.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+@media only screen and (max-width: 1020px) {
+    #destination{
+    background: url('../assets/destination/bg-tablet.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #destination{
+    background: url('../assets/destination/bg-mobile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
     }
 }
