--- a/input.css
+++ b/input.css
@@ -56,3 +56,29 @@
     background-position: center top;
     }
 }
+
+/*   */
+
+#crew{
+    background: url('../assets/crew/background-crew-desktop.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+@media only screen and (max-width: 1020px) {
+    #crew{
+    background: url('../assets/crew/background-crew-tablet.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #crew{
+    background: url('../assets/crew/background-crew-mobile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    }
+}
