--- a/input.css
+++ b/input.css
@@ -82,3 +82,30 @@
     background-position: center top;
     }
 }
+
+
+/*  */
+
+#technology{
+    background: url('../assets/technology/background-technology-desktop.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+@media only screen and (max-width: 1020px) {
+    #technology{
+    background: url('../assets/technology/background-technology-tablet.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #technology{
+    background: url('../assets/technology/background-technology-mobile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    }
+}
